Add squashfuse build config from libappimage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 # required for hassle-free C11/C++11 support
 cmake_minimum_required(VERSION 3.1)
 
-project(appimage-type3-runtime)
+project(appimage-type3-runtime C CXX)
 
 # we use C11 for the runtime implementation
 set(CMAKE_C_STANRARD 11)
@@ -10,6 +10,10 @@ set(CMAKE_C_STANRARD_REQUIRED ON)
 # we use C++11 for the tests
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# include external dependencies configuration
+include(cmake/tools.cmake)
+include(cmake/dependencies.cmake)
 
 add_subdirectory(src)
 
