Link completely statically on Alpine
See https://www.openbsd.org/papers/asiabsdcon2015-pie-slides.pdf for more information (slide especially 8).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ include(cmake/dependencies.cmake)
 
 # build static binary
 message(STATUS "Setting up static builds")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -static")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -static -no-pie")
 
 add_subdirectory(src)
 
