--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,9 @@ message(STATUS "Setting up paranoia mode")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
 
+add_subdirectory(lib)
+
 add_subdirectory(src)
 
+enable_testing()
 add_subdirectory(tests)
