Update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ services:
 
 matrix:
   include:
-    - name: AMD64 Ubuntu xenial
-      env: DIST=ubuntu DIST_VERSION=xenial ARCH=x86_64
-    - name: AMD64 Alpine latest
-      env: DIST=alpine DIST_VERSION=latest ARCH=x86_64
+    - name: AMD64 Ubuntu xenial gcc
+      env: DIST=ubuntu DIST_VERSION=xenial ARCH=x86_64 COMPILER=gcc
+    - name: AMD64 Alpine latest gcc
+      env: DIST=alpine DIST_VERSION=latest ARCH=x86_64 COMPILER=gcc
 
 scripts:
   - ci/build-in-docker.sh
