Print sections dropped by --gc-sections

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ add_subdirectory(header)
 # we use -no-pie, -flto, -fdata-sections ... and --gc-sections to reduce the size of the resulting binary
 # TODO: assess security hazard caused by not using PIE
 # TODO: set up squashfuse build as an OBJECT library in CMake to improve the LTO result
-set(COMPILE_FLAGS -static -flto -fno-exceptions -fdata-sections -ffunction-sections -Wl,--gc-sections)
+set(COMPILE_FLAGS -static -flto -fno-exceptions -fdata-sections -ffunction-sections -Wl,--gc-sections -Wl,--print-gc-sections)
 
 if(CMAKE_C_COMPILER_ID STREQUAL "Clang")
     message(STATUS "Using clang which does not support -no-pie")
