--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ add_subdirectory(header)
 # we use -no-pie, -flto, -fdata-sections ... and --gc-sections to reduce the size of the resulting binary
 # TODO: assess security hazard caused by not using PIE
 # TODO: set up squashfuse build as an OBJECT library in CMake to improve the LTO result
-set(COMPILE_FLAGS -static -flto -fno-exceptions -fdata-sections -ffunction-sections -Wl,--gc-sections -Wl,--print-gc-sections)
+set(COMPILE_FLAGS -static -flto -fno-exceptions -fdata-sections -ffunction-sections)
 
 if(CMAKE_C_COMPILER_ID STREQUAL "Clang")
     message(STATUS "Using clang which does not support -no-pie")
@@ -13,8 +13,15 @@ elseif(CMAKE_C_COMPILER_ID STREQUAL "GNU")
     list(APPEND COMPILE_FLAGS -no-pie)
 endif()
 
-if(CMAKE_BUILD_TYPE STRLESS_EQUAL release)
-    message(STATUS "Release build detected, adding -Os")
+if(CMAKE_C_COMPILER_ID STREQUAL "Clang")
+    message(STATUS "Using clang whose linker does not support --gc-sections")
+elseif(CMAKE_C_COMPILER_ID STREQUAL "GNU")
+    message(STATUS "Using gcc, adding --gc-sections linker flag")
+    list(APPEND COMPILE_FLAGS -Wl,--gc-sections -Wl,--print-gc-sections)
+endif()
+
+if(CMAKE_BUILD_TYPE STRLESS_EQUAL release AND CMAKE_C_COMPILER_ID STREQUAL "GNU")
+    message(STATUS "Release build using gcc detected, adding -Os")
     list(APPEND COMPILE_FLAGS -Os)
 endif()
 
