--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_executable(test_appimage_header test_appimage_header.cpp)
 target_link_libraries(test_appimage_header PRIVATE catch2 appimage_type3_header)
 add_test(test_appimage_header test_appimage_header)
+
+add_test(test_appimage_magic_bytes ${CMAKE_CURRENT_SOURCE_DIR}/test_appimage_magic_bytes.sh ${CMAKE_BINARY_DIR}/src/runtime)
