Make test runner static

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_executable(test_appimage_section test_appimage_section.c)
+target_link_libraries(test_appimage_section PRIVATE -static-libgcc -static-libstdc++ -static)
 add_test(test_appimage_section test_appimage_section ${CMAKE_BINARY_DIR}/src/runtime)
 
 add_executable(test_appimage_header test_appimage_header.cpp)
