Set AppImageFile as magic string

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,15 +23,13 @@ function(setup_target TARGET)
 
     target_compile_options(${TARGET} PUBLIC ${COMPILE_FLAGS})
     target_link_options(${TARGET} PUBLIC ${COMPILE_FLAGS})
-
-    # add magic bytes section to the final executable
-    target_link_options(${TARGET} PRIVATE -T ${CMAKE_CURRENT_SOURCE_DIR}/magic_bytes.ld )
 endfunction()
 
 add_library(appimage_type3_header OBJECT ${PROJECT_SOURCE_DIR}/include/appimage-header.h)
 target_include_directories(appimage_type3_header PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
-add_executable(runtime runtime.c magic_bytes.ld)
+add_executable(runtime runtime.c)
 target_link_libraries(runtime PRIVATE libsquashfuse)
 setup_target(runtime)
-
+# add magic bytes section to the final executable
+target_link_options(runtime PRIVATE -T ${CMAKE_CURRENT_SOURCE_DIR}/magic_bytes.ld )
