--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(test_appimage_section test_appimage_section.c)
-target_link_libraries(test_appimage_section PRIVATE -static-libgcc -static-libstdc++ -static)
+target_link_libraries(test_appimage_section PRIVATE -static-libgcc -static-libstdc++ -static appimage_type3_header)
 add_test(test_appimage_section test_appimage_section ${CMAKE_BINARY_DIR}/src/runtime)
